# corp-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  pom.xml
ai-service/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
ai-service/eval/: __init__.py  ablation_runner.py  bm25.py  final_regression.py  graph_corpus_state.py  injection_runner.py  io.py  metrics.py  query_client.py  ragas_runner.py  reporting.py  retrieval_modes.py  schema.py  seed_corpus.py  validate_corpus.py  validate_golden.py
ai-service/migrations/: env.py
ai-service/tests/: test_amqp_consumer.py  test_amqp_publisher.py  test_chunk_detail_router.py  test_chunker.py  test_context_packer.py  test_corpus_sanitizer.py  test_deepseek_extraction_live.py  test_diagnostics.py  test_docling_parser.py  test_document_parser_contract.py  test_embedding_adapter.py  test_entity_extraction_fixture.py  test_entity_extraction_live.py  test_entity_extractor.py  test_eval_ablation_runner.py  test_eval_ablation_subset.py  test_eval_bm25.py  test_eval_final_regression.py  test_eval_golden_schema.py  test_eval_graph_corpus_state.py  test_eval_graph_report.py  test_eval_injection_runner.py  test_eval_metrics.py  test_eval_query_client.py  test_eval_ragas_runner.py  test_eval_reporting.py  test_eval_schema.py  test_eval_seed_corpus.py  test_graph_indexer_schema.py  test_graph_indexer_write.py  test_graph_retriever.py  test_hybrid_retriever.py  test_ingestion_orchestrator.py  test_ingestion_state_repositories.py  test_live_smokes.py  test_main_idempotent_dispatch.py  (+20 more)
(+582 files in other folders)
