[project]
name = "corp-rag-ai"
version = "0.1.0"
description = "Python AI service foundation for the Corporate RAG System."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aio-pika>=9.6.2,<10.0.0",
    "alembic>=1.14.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "docling>=2.93.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "markdown-it-py>=4.2.0,<5.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "trafilatura>=2.0.0,<3.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0,<7.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corp_rag_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
